--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -839,7 +839,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListItemCell" rowHeight="90" id="ygc-PT-PHM">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListItemCell" rowHeight="90" id="ygc-PT-PHM" customClass="ListViewCell" customModule="eventBox" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="600" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ygc-PT-PHM" id="EFf-Qo-bUw">
@@ -882,6 +882,10 @@
                                                 <constraint firstItem="N1C-eC-iHW" firstAttribute="top" secondItem="EFf-Qo-bUw" secondAttribute="topMargin" id="nAz-Ub-KsO"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="itemLabel" destination="N1C-eC-iHW" id="2fc-pM-3aA"/>
+                                            <outlet property="userImageView" destination="rA2-aa-gj6" id="Wyu-2n-jDn"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
