--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -835,7 +835,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListItemCell" rowHeight="90" id="ygc-PT-PHM" customClass="ListViewCell" customModule="eventBox" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ListItemCell" rowHeight="90" id="ygc-PT-PHM" customClass="ListViewCell" customModule="eventBox" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="600" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ygc-PT-PHM" id="EFf-Qo-bUw">
@@ -860,9 +860,15 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oYz-Mb-0xX">
+                                                    <rect key="frame" x="8" y="55" width="510" height="27"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N1C-eC-iHW">
-                                                    <rect key="frame" x="8" y="8" width="510" height="73.5"/>
-                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
+                                                    <rect key="frame" x="8" y="8" width="510" height="39"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -870,10 +876,14 @@
                                             <color key="backgroundColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="rA2-aa-gj6" secondAttribute="trailing" constant="8" id="9rn-II-h5q"/>
+                                                <constraint firstItem="rA2-aa-gj6" firstAttribute="leading" secondItem="oYz-Mb-0xX" secondAttribute="trailing" constant="8" id="HGN-Oa-Hxc"/>
                                                 <constraint firstItem="rA2-aa-gj6" firstAttribute="leading" secondItem="N1C-eC-iHW" secondAttribute="trailing" constant="8" id="Hyd-hm-UjV"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="N1C-eC-iHW" secondAttribute="bottom" id="IY2-Hq-cFm"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="N1C-eC-iHW" secondAttribute="bottom" constant="35" id="IY2-Hq-cFm"/>
+                                                <constraint firstItem="oYz-Mb-0xX" firstAttribute="top" secondItem="N1C-eC-iHW" secondAttribute="bottom" constant="8" id="SUl-kb-JAN"/>
+                                                <constraint firstItem="oYz-Mb-0xX" firstAttribute="leading" secondItem="EFf-Qo-bUw" secondAttribute="leadingMargin" id="b7G-BE-Xb1"/>
                                                 <constraint firstItem="rA2-aa-gj6" firstAttribute="bottom" secondItem="EFf-Qo-bUw" secondAttribute="bottomMargin" constant="-8" id="c7a-Ii-HF4"/>
                                                 <constraint firstItem="N1C-eC-iHW" firstAttribute="leading" secondItem="EFf-Qo-bUw" secondAttribute="leadingMargin" id="cDx-Sx-HKd"/>
+                                                <constraint firstItem="oYz-Mb-0xX" firstAttribute="bottom" secondItem="EFf-Qo-bUw" secondAttribute="bottomMargin" id="geI-up-Yv4"/>
                                                 <constraint firstItem="rA2-aa-gj6" firstAttribute="top" secondItem="EFf-Qo-bUw" secondAttribute="topMargin" constant="8" id="mDH-uX-oJZ"/>
                                                 <constraint firstItem="N1C-eC-iHW" firstAttribute="top" secondItem="EFf-Qo-bUw" secondAttribute="topMargin" id="nAz-Ub-KsO"/>
                                             </constraints>
@@ -881,6 +891,7 @@
                                         <connections>
                                             <outlet property="itemLabel" destination="N1C-eC-iHW" id="2fc-pM-3aA"/>
                                             <outlet property="userImageView" destination="rA2-aa-gj6" id="Wyu-2n-jDn"/>
+                                            <outlet property="userNameLabel" destination="oYz-Mb-0xX" id="Sci-fk-3gp"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
